2008-08-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_scaled_font.c: support Cairo::ScaledFont#scale_matrix.

	* test/test_scaled_font.rb: add.

	* src/rb_cairo_matrix.c (cr_matrix_equal): add Cairo::Matrix#==.

	* src/rb_cairo_surface.c: support Cairo::Surface#fallback_resolution.

	* test/test_surface.rb (SurfaceTest#test_fallback_resolution): add
	a test for Cairo::Surface#fallback_resolution.

	* test/test_context.rb (ContextTest#test_font_face): add a test
	for Cairo::Context#font_face{,=}.

	* src/rb_cairo_private.[ch] (rb_cairo__inspect): add.

	* test/test_font_face.rb: add.

	* src/rb_cairo_font_face.c: support Cairo::ToyFontFace.

	* src/cairo.def, src/rb_cairo.h: add rb_cCairo_ToyFontFace and
	rb_cCairo_UserFontFace.

2008-08-13  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo/constants.rb (Cairo::LCD_FILTER_*): define.

	* src/rb_cairo.h (RVAL2CRLCDFILTER,
	rb_cairo_lcd_filter_from_ruby_object): add.

	* src/cairo.def (rb_cairo_lcd_filter_from_ruby_object): add.

	* src/rb_cairo_font_options.c (Cairo::FontOptions#lcd_filter,
	Cairo::FontOptions#lcd_filter=): add.

	* test/test_font_options.rb: add.

	* src/rb_cairo.h, src/cairo.def, src/rb_cairo_constants.c
	(Cairo::LCDFilter): add.

	* test/test_constants.rb: add.

	* src/rb_cairo_exception.c: support new statuses appeared since
	cairo 1.7.2.

	* src/rb_cairo.c (Cairo.satisfied_version?): add.

	* test/test_exception.rb: add.

	* test/cairo-test-utils.rb: add.

	* test/run-test.rb: use Test::Unit 2.x.

	* test-unit: imported Test::Unit 2.x.

2008-08-11  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_context.rb: add.

	* test/run-test.rb: don't use at_exit test runner because rcairo
	uses at_exit based GC guard mechanism.

	* src/rb_cairo_context.c: free all alive Cairo::Context before
	stop GC like Cairo::Surface.

	* src/rb_cairo_private.[ch]: abstract explicit free before stop GC
	used by Cairo::Surface.

	* src/rb_cairo_surface.c: use abstracted explicit free before stop
	GC.
